<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmarks"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/menu_order" />
    </group>



    <item android:title="Legal">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_branch"
                android:icon="@drawable/ic_menu_call"
                android:title="Our Branches" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_privacy"
                android:title="@string/menu_privacy_policy" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_menu_terms_conditions"
                android:title="@string/menu_terms_condition" />
        </menu>
    </item>
    <item android:title="Share &amp;Support">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_powered"
                android:icon="@drawable/spitech"
                android:title="Powered By-SpiTech" />
        </menu>
    </item>


</menu>
